[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "homeassistant-bayesian-backfill"
version = "0.3.0"
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "pytest",
    "pyyaml",
    "jinja2",
    "requests",
]

[tool.setuptools.packages.find]
exclude = ["backfill_bayesian", "backfill_bayesian.*", "tests", "tests.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires a live Home Assistant instance (set HA_URL and HA_TOKEN)",
]
